Update DocPlanner candidate ranking.ipynb

--- a/notebooks/DocPlanner candidate ranking.ipynb
+++ b/notebooks/DocPlanner candidate ranking.ipynb
@@ -27,6 +27,7 @@
     "from transformers import (\n",
     "    BertTokenizer,\n",
     "    BertForSequenceClassification,\n",
+    "    pipeline,\n",
     "    Trainer,\n",
     "    TrainingArguments\n",
     ")\n",
@@ -641,8 +642,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='100' max='4821' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 100/4821 00:27 < 22:22, 3.52 it/s, Epoch 0.06/3]\n",
+       "      <progress value='4822' max='4821' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [4821/4821 23:47, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -653,8 +654,24 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.221700</td>\n",
+       "      <td>0.191588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.116500</td>\n",
+       "      <td>0.190991</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
-       "</table><p>"
+       "</table><p>\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='6' max='402' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  6/402 00:00 < 00:24, 16.17 it/s]\n",
+       "    </div>\n",
+       "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -705,9 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import pipeline\n",
-    "\n",
-    "error_detector = pipeline(\"text-classification\", model=model, tokenizer=tokenizer)\n",
+    "error_detector = pipeline(\"text-classification\", model=BIOBERT.model, tokenizer=BIOBERT.tokenize)\n",
     "\n",
     "test_text = \"The patient has dyspnaea and needs immdeiate attention.\"\n",
     "score = error_detector(test_text)\n",
